# Game_of_Life

./: .gitignore  CMakeLists.txt  README.md
include/: shader.h
res/shaders/: simple.compute.shader  simple.fragment.shader  simple.vertex.shader
src/: main.cpp  shader.cpp
